--- a/zeppelin-server/pom.xml
+++ b/zeppelin-server/pom.xml
@@ -130,8 +130,9 @@
 
     <dependency>
       <groupId>org.eclipse.jetty.aggregate</groupId>
-      <artifactId>jetty-all-server</artifactId>
-      <version>${jetty.version}</version>
+      <!--<artifactId>jetty-all-server</artifactId>-->
+      <artifactId>jetty-all</artifactId>
+      <version>9.2.12.v20150709</version>
     </dependency>
 
     <dependency>
